--- a/index.html
+++ b/index.html
@@ -16,52 +16,54 @@
 </head>
 <body>
     <!-- navbar -->
-    <header>
-        <nav class="nav-wrapper transparent">
-            <div class="container">
-                <a href="" class="brand-logo">Logo</a>
-                <a href="" class="sidenav-trigger" data-target="mobile-menu">
-                    <i class="material-icons">menu</i>
-                </a>
-                <ul class="right hide-on-med-and-down">
-                    <li><a href="#photos">Photos</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is Facebook">
-                        <i class="fab fa-facebook"></i>
-                    </a></li>
-                    <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is Twitter">
-                        <i class="fab fa-twitter"></i>
-                    </a></li>
-                    <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is Instagram">
-                        <i class="fab fa-instagram"></i>
-                    </a></li>
-                    <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is WhatsApp">
-                        <i class="fab fa-whatsapp"></i>
-                    </a></li>
-                </ul>
-                <ul class="sidenav grey lighten-2" id="mobile-menu">
-                    <li><a href="#photos">Photos</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <div class="row">
-                        <li><a href="#" class="btn-floating btn-small transparent">
+    <div class="div-header">
+        <header>
+            <nav class="nav-wrapper transparent">
+                <div class="container">
+                    <a href="" class="brand-logo">Logo</a>
+                    <a href="" class="sidenav-trigger" data-target="mobile-menu">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="#photos">Photos</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is Facebook">
                             <i class="fab fa-facebook"></i>
                         </a></li>
-                        <li><a href="#" class="btn-floating btn-small transparent">
+                        <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is Twitter">
                             <i class="fab fa-twitter"></i>
                         </a></li>
-                        <li><a href="#" class="btn-floating btn-small transparent">
+                        <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is Instagram">
                             <i class="fab fa-instagram"></i>
                         </a></li>
-                        <li><a href="#" class="btn-floating btn-small transparent">
+                        <li><a href="#" class="tooltipped btn-floating btn-small indigo darken-4" data-tooltip="This is WhatsApp">
                             <i class="fab fa-whatsapp"></i>
                         </a></li>
-                    </div>
-                </ul>
-            </div>
-        </nav>
-    </header>
+                    </ul>
+                    <ul class="sidenav grey lighten-2" id="mobile-menu">
+                        <li><a href="#photos">Photos</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <div class="row">
+                            <li><a href="#" class="btn-floating btn-small transparent">
+                                <i class="fab fa-facebook"></i>
+                            </a></li>
+                            <li><a href="#" class="btn-floating btn-small transparent">
+                                <i class="fab fa-twitter"></i>
+                            </a></li>
+                            <li><a href="#" class="btn-floating btn-small transparent">
+                                <i class="fab fa-instagram"></i>
+                            </a></li>
+                            <li><a href="#" class="btn-floating btn-small transparent">
+                                <i class="fab fa-whatsapp"></i>
+                            </a></li>
+                        </div>
+                    </ul>
+                </div>
+            </nav>
+        </header>
+    </div>
     <!-- photo / grid -->
     <section class="cointainer section scrollspy" id="photos">
         <div class="row">
